--- a/frontend/veganizza-app/public/index.html
+++ b/frontend/veganizza-app/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900|Ubuntu:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-    <title>React App</title>
+    <title>Veganizza | Fresh vegan pizza</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
